QtBeef/src/Qt/qxmlstream.bf

class QXmlStreamReader : IQXmlStreamReader
{
	private QXmlStreamReader_Ptr* ptr;
	public void* ObjectPtr => ptr;
	public this()
	{
		this.ptr = CQt.QXmlStreamReader_new();
	}
	public this(IQIODevice device)
	{
		this.ptr = CQt.QXmlStreamReader_new2((.)device?.ObjectPtr);
	}
	public this(void** data)
	{
		this.ptr = CQt.QXmlStreamReader_new3(data);
	}
	public this(String data)
	{
		this.ptr = CQt.QXmlStreamReader_new4(libqt_string(data));
	}
	public this(c_char* data)
	{
		this.ptr = CQt.QXmlStreamReader_new5(data);
	}
	public ~this()
	{
		CQt.QXmlStreamReader_Delete(this.ptr);
	}
	public void SetDevice(IQIODevice device)
	{
		CQt.QXmlStreamReader_SetDevice((.)this.ptr, (.)device?.ObjectPtr);
	}
	public QIODevice_Ptr** Device()
	{
		return CQt.QXmlStreamReader_Device((.)this.ptr);
	}
	public void AddData(void** data)
	{
		CQt.QXmlStreamReader_AddData((.)this.ptr, data);
	}
	public void AddData2(String data)
	{
		CQt.QXmlStreamReader_AddData2((.)this.ptr, libqt_string(data));
	}
	public void AddData3(c_char* data)
	{
		CQt.QXmlStreamReader_AddData3((.)this.ptr, data);
	}
	public void Clear()
	{
		CQt.QXmlStreamReader_Clear((.)this.ptr);
	}
	public bool AtEnd()
	{
		return CQt.QXmlStreamReader_AtEnd((.)this.ptr);
	}
	public QXmlStreamReader_TokenType ReadNext()
	{
		return CQt.QXmlStreamReader_ReadNext((.)this.ptr);
	}
	public bool ReadNextStartElement()
	{
		return CQt.QXmlStreamReader_ReadNextStartElement((.)this.ptr);
	}
	public void SkipCurrentElement()
	{
		CQt.QXmlStreamReader_SkipCurrentElement((.)this.ptr);
	}
	public QXmlStreamReader_TokenType TokenType()
	{
		return CQt.QXmlStreamReader_TokenType((.)this.ptr);
	}
	public libqt_string TokenString()
	{
		return CQt.QXmlStreamReader_TokenString((.)this.ptr);
	}
	public void SetNamespaceProcessing(bool namespaceProcessing)
	{
		CQt.QXmlStreamReader_SetNamespaceProcessing((.)this.ptr, namespaceProcessing);
	}
	public bool NamespaceProcessing()
	{
		return CQt.QXmlStreamReader_NamespaceProcessing((.)this.ptr);
	}
	public bool IsStartDocument()
	{
		return CQt.QXmlStreamReader_IsStartDocument((.)this.ptr);
	}
	public bool IsEndDocument()
	{
		return CQt.QXmlStreamReader_IsEndDocument((.)this.ptr);
	}
	public bool IsStartElement()
	{
		return CQt.QXmlStreamReader_IsStartElement((.)this.ptr);
	}
	public bool IsEndElement()
	{
		return CQt.QXmlStreamReader_IsEndElement((.)this.ptr);
	}
	public bool IsCharacters()
	{
		return CQt.QXmlStreamReader_IsCharacters((.)this.ptr);
	}
	public bool IsWhitespace()
	{
		return CQt.QXmlStreamReader_IsWhitespace((.)this.ptr);
	}
	public bool IsCDATA()
	{
		return CQt.QXmlStreamReader_IsCDATA((.)this.ptr);
	}
	public bool IsComment()
	{
		return CQt.QXmlStreamReader_IsComment((.)this.ptr);
	}
	public bool IsDTD()
	{
		return CQt.QXmlStreamReader_IsDTD((.)this.ptr);
	}
	public bool IsEntityReference()
	{
		return CQt.QXmlStreamReader_IsEntityReference((.)this.ptr);
	}
	public bool IsProcessingInstruction()
	{
		return CQt.QXmlStreamReader_IsProcessingInstruction((.)this.ptr);
	}
	public bool IsStandaloneDocument()
	{
		return CQt.QXmlStreamReader_IsStandaloneDocument((.)this.ptr);
	}
	public c_longlong LineNumber()
	{
		return CQt.QXmlStreamReader_LineNumber((.)this.ptr);
	}
	public c_longlong ColumnNumber()
	{
		return CQt.QXmlStreamReader_ColumnNumber((.)this.ptr);
	}
	public c_longlong CharacterOffset()
	{
		return CQt.QXmlStreamReader_CharacterOffset((.)this.ptr);
	}
	public QXmlStreamAttributes_Ptr* Attributes()
	{
		return CQt.QXmlStreamReader_Attributes((.)this.ptr);
	}
	public libqt_string ReadElementText()
	{
		return CQt.QXmlStreamReader_ReadElementText((.)this.ptr);
	}
	public void* NamespaceDeclarations()
	{
		return CQt.QXmlStreamReader_NamespaceDeclarations((.)this.ptr);
	}
	public void AddExtraNamespaceDeclaration(IQXmlStreamNamespaceDeclaration extraNamespaceDeclaraction)
	{
		CQt.QXmlStreamReader_AddExtraNamespaceDeclaration((.)this.ptr, (.)extraNamespaceDeclaraction?.ObjectPtr);
	}
	public void AddExtraNamespaceDeclarations(void** extraNamespaceDeclaractions)
	{
		CQt.QXmlStreamReader_AddExtraNamespaceDeclarations((.)this.ptr, extraNamespaceDeclaractions);
	}
	public void* NotationDeclarations()
	{
		return CQt.QXmlStreamReader_NotationDeclarations((.)this.ptr);
	}
	public void* EntityDeclarations()
	{
		return CQt.QXmlStreamReader_EntityDeclarations((.)this.ptr);
	}
	public c_int EntityExpansionLimit()
	{
		return CQt.QXmlStreamReader_EntityExpansionLimit((.)this.ptr);
	}
	public void SetEntityExpansionLimit(c_int limit)
	{
		CQt.QXmlStreamReader_SetEntityExpansionLimit((.)this.ptr, limit);
	}
	public void RaiseError()
	{
		CQt.QXmlStreamReader_RaiseError((.)this.ptr);
	}
	public libqt_string ErrorString()
	{
		return CQt.QXmlStreamReader_ErrorString((.)this.ptr);
	}
	public QXmlStreamReader_Error Error()
	{
		return CQt.QXmlStreamReader_Error((.)this.ptr);
	}
	public bool HasError()
	{
		return CQt.QXmlStreamReader_HasError((.)this.ptr);
	}
	public void SetEntityResolver(IQXmlStreamEntityResolver resolver)
	{
		CQt.QXmlStreamReader_SetEntityResolver((.)this.ptr, (.)resolver?.ObjectPtr);
	}
	public QXmlStreamEntityResolver_Ptr** EntityResolver()
	{
		return CQt.QXmlStreamReader_EntityResolver((.)this.ptr);
	}
	public libqt_string ReadElementText1(QXmlStreamReader_ReadElementTextBehaviour behaviour)
	{
		return CQt.QXmlStreamReader_ReadElementText1((.)this.ptr, behaviour);
	}
	public void RaiseError1(String message)
	{
		CQt.QXmlStreamReader_RaiseError1((.)this.ptr, libqt_string(message));
	}
}
interface IQXmlStreamReader : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QXmlStreamWriter
// --------------------------------------------------------------
[CRepr]
struct QXmlStreamWriter_Ptr: void
{
}
extension CQt
{
	[LinkName("QXmlStreamWriter_new")]
	public static extern QXmlStreamWriter_Ptr* QXmlStreamWriter_new();
	[LinkName("QXmlStreamWriter_new2")]
	public static extern QXmlStreamWriter_Ptr* QXmlStreamWriter_new2(QIODevice_Ptr** device);
	[LinkName("QXmlStreamWriter_Delete")]
	public static extern void QXmlStreamWriter_Delete(QXmlStreamWriter_Ptr* self);
	[LinkName("QXmlStreamWriter_SetDevice")]
	public static extern void QXmlStreamWriter_SetDevice(QXmlStreamWriter_Ptr* self, QIODevice_Ptr** device);
	[LinkName("QXmlStreamWriter_Device")]
	public static extern QIODevice_Ptr** QXmlStreamWriter_Device(QXmlStreamWriter_Ptr* self);
	[LinkName("QXmlStreamWriter_SetAutoFormatting")]
	public static extern void QXmlStreamWriter_SetAutoFormatting(QXmlStreamWriter_Ptr* self, bool autoFormatting);
	[LinkName("QXmlStreamWriter_AutoFormatting")]
	public static extern bool QXmlStreamWriter_AutoFormatting(QXmlStreamWriter_Ptr* self);
	[LinkName("QXmlStreamWriter_SetAutoFormattingIndent")]
	public static extern void QXmlStreamWriter_SetAutoFormattingIndent(QXmlStreamWriter_Ptr* self, c_int spacesOrTabs);
	[LinkName("QXmlStreamWriter_AutoFormattingIndent")]
	public static extern c_int QXmlStreamWriter_AutoFormattingIndent(QXmlStreamWriter_Ptr* self);
	[LinkName("QXmlStreamWriter_WriteAttribute")]
	public static extern void QXmlStreamWriter_WriteAttribute(QXmlStreamWriter_Ptr* self, libqt_string qualifiedName, libqt_string value);
	[LinkName("QXmlStreamWriter_WriteAttribute2")]
	public static extern void QXmlStreamWriter_WriteAttribute2(QXmlStreamWriter_Ptr* self, libqt_string namespaceUri, libqt_string name, libqt_string value);
	[LinkName("QXmlStreamWriter_WriteAttribute3")]
	public static extern void QXmlStreamWriter_WriteAttribute3(QXmlStreamWriter_Ptr* self, QXmlStreamAttribute_Ptr* attribute);
	[LinkName("QXmlStreamWriter_WriteAttributes")]
	public static extern void QXmlStreamWriter_WriteAttributes(QXmlStreamWriter_Ptr* self, QXmlStreamAttributes_Ptr* attributes);
	[LinkName("QXmlStreamWriter_WriteCDATA")]
	public static extern void QXmlStreamWriter_WriteCDATA(QXmlStreamWriter_Ptr* self, libqt_string text);
	[LinkName("QXmlStreamWriter_WriteCharacters")]
	public static extern void QXmlStreamWriter_WriteCharacters(QXmlStreamWriter_Ptr* self, libqt_string text);
	[LinkName("QXmlStreamWriter_WriteComment")]
	public static extern void QXmlStreamWriter_WriteComment(QXmlStreamWriter_Ptr* self, libqt_string text);
	[LinkName("QXmlStreamWriter_WriteDTD")]
	public static extern void QXmlStreamWriter_WriteDTD(QXmlStreamWriter_Ptr* self, libqt_string dtd);
	[LinkName("QXmlStreamWriter_WriteEmptyElement")]
	public static extern void QXmlStreamWriter_WriteEmptyElement(QXmlStreamWriter_Ptr* self, libqt_string qualifiedName);
	[LinkName("QXmlStreamWriter_WriteEmptyElement2")]
	public static extern void QXmlStreamWriter_WriteEmptyElement2(QXmlStreamWriter_Ptr* self, libqt_string namespaceUri, libqt_string name);
	[LinkName("QXmlStreamWriter_WriteTextElement")]
	public static extern void QXmlStreamWriter_WriteTextElement(QXmlStreamWriter_Ptr* self, libqt_string qualifiedName, libqt_string text);
	[LinkName("QXmlStreamWriter_WriteTextElement2")]
	public static extern void QXmlStreamWriter_WriteTextElement2(QXmlStreamWriter_Ptr* self, libqt_string namespaceUri, libqt_string name, libqt_string text);
	[LinkName("QXmlStreamWriter_WriteEndDocument")]
	public static extern void QXmlStreamWriter_WriteEndDocument(QXmlStreamWriter_Ptr* self);
	[LinkName("QXmlStreamWriter_WriteEndElement")]
	public static extern void QXmlStreamWriter_WriteEndElement(QXmlStreamWriter_Ptr* self);
	[LinkName("QXmlStreamWriter_WriteEntityReference")]
	public static extern void QXmlStreamWriter_WriteEntityReference(QXmlStreamWriter_Ptr* self, libqt_string name);
	[LinkName("QXmlStreamWriter_WriteNamespace")]
	public static extern void QXmlStreamWriter_WriteNamespace(QXmlStreamWriter_Ptr* self, libqt_string namespaceUri);
	[LinkName("QXmlStreamWriter_WriteDefaultNamespace")]
	public static extern void QXmlStreamWriter_WriteDefaultNamespace(QXmlStreamWriter_Ptr* self, libqt_string namespaceUri);
	[LinkName("QXmlStreamWriter_WriteProcessingInstruction")]
	public static extern void QXmlStreamWriter_WriteProcessingInstruction(QXmlStreamWriter_Ptr* self, libqt_string target);
	[LinkName("QXmlStreamWriter_WriteStartDocument")]
	public static extern void QXmlStreamWriter_WriteStartDocument(QXmlStreamWriter_Ptr* self);
	[LinkName("QXmlStreamWriter_WriteStartDocument2")]
	public static extern void QXmlStreamWriter_WriteStartDocument2(QXmlStreamWriter_Ptr* self, libqt_string version);
	[LinkName("QXmlStreamWriter_WriteStartDocument3")]
	public static extern void QXmlStreamWriter_WriteStartDocument3(QXmlStreamWriter_Ptr* self, libqt_string version, bool standalone);
	[LinkName("QXmlStreamWriter_WriteStartElement")]
	public static extern void QXmlStreamWriter_WriteStartElement(QXmlStreamWriter_Ptr* self, libqt_string qualifiedName);
	[LinkName("QXmlStreamWriter_WriteStartElement2")]
	public static extern void QXmlStreamWriter_WriteStartElement2(QXmlStreamWriter_Ptr* self, libqt_string namespaceUri, libqt_string name);
	[LinkName("QXmlStreamWriter_WriteCurrentToken")]
	public static extern void QXmlStreamWriter_WriteCurrentToken(QXmlStreamWriter_Ptr* self, QXmlStreamReader_Ptr* reader);
	[LinkName("QXmlStreamWriter_HasError")]
	public static extern bool QXmlStreamWriter_HasError(QXmlStreamWriter_Ptr* self);
	[LinkName("QXmlStreamWriter_WriteNamespace2")]
	public static extern void QXmlStreamWriter_WriteNamespace2(QXmlStreamWriter_Ptr* self, libqt_string namespaceUri, libqt_string prefix);
	[LinkName("QXmlStreamWriter_WriteProcessingInstruction2")]
	public static extern void QXmlStreamWriter_WriteProcessingInstruction2(QXmlStreamWriter_Ptr* self, libqt_string target, libqt_string data);
}
